src/test/ui/error-codes/E0124.stderr
error[E0124]: field `field1` is already declared
  --> $DIR/E0124.rs:13:5
   |
12 |     field1: i32,
   |     ----------- `field1` first declared here
13 |     field1: i32,
   |     ^^^^^^^^^^^ field already declared

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0124"
